--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,8 @@ pytest==7.4.3
 
 # PDF generation
 fpdf2==2.8.2
+
+# Evaluation and visualization
+scikit-learn==1.4.0
+seaborn==0.13.2
+matplotlib==3.8.3
